<resources>
    <string name="battery_mentor">Battery Mentor</string>
    <string name="battery_mentor_pro">Battery Mentor Pro</string>
    <string name="mW">mW</string>
    <string name="mA">mA</string>
    <string name="hr">hr</string>
    <string name="cpu_load">%</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="inches">inches</string>
    <string name="dpi">dpi</string>
    <string name="mW_per_percent">mW / %</string>
    <string name="mW_per_pixel">mW / pixel</string>
    <string name="two_minutes">2 minutes</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="invalid_value">~</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="close">CLOSE</string>
    <string name="current_template" formatted="false">%s mA</string>
    <string name="power_template" formatted="false">%s mW</string>
    <string name="more_details">More Details</string>
    <string name="minute_remaining_template" formatted="false">%s minute remaining</string>
    <string name="minutes_remaining_template" formatted="false">%s minutes remaining</string>
    <string name="second_remaining_template" formatted="false">%s second remaining</string>
    <string name="seconds_remaining_template" formatted="false">%s seconds remaining</string>
    <string name="less_than_a_minute">Less than a minute</string>
    <string name="version">Version</string>
    <string name="remaining">remaining</string>
    <string name="feedback_dialog_title">Send Feedback</string>
    <string name="model_dialog_title">Power Models</string>
    <string name="model_screen_template" formatted="false">P = %sB + %s</string>
    <string name="model_cpu_template" formatted="false">P = %sL + %s</string>
    <string name="model_cpu_frequency_template" formatted="false">P = %sF^2 + %sF + %s</string>
    <string name="navigation_about">About</string>
    <string name="navigation_feedback">Feedback</string>
    <string name="navigation_tutorial">Tutorial</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_exit">Exit</string>
    <string name="notification_measuring">Measuring...</string>
    <string name="notification_power_template" formatted="false">Power: %d mW</string>
    <string name="notification_current_template" formatted="false">Current: %d mA</string>
    <string name="notification_battery_life_template" formatted="false">Battery Life: %s h</string>
    <string name="battery_test">Battery Test</string>
    <string name="cpu_test">Apps Test</string>
    <string name="battery_stats">Battery Stats</string>
    <string name="charger_benchmark">Charger Benchmark</string>
    <string name="battery_life_remaining">Battery life remaining</string>
    <string name="battery_life_until_full">Until fully charged</string>
    <string name="battery_life_not_supported">Charging power not supported</string>
    <string name="battery_life_insufficient_charging_power">Insufficient charging power</string>
    <string name="battery_life_unknown">~</string>
    <string name="tab_battery">BATTERY</string>
    <string name="tab_screen">SCREEN</string>
    <string name="tab_apps">APPS</string>
    <string name="battery_details">Battery Details</string>
    <string name="screen_details">Screen Details</string>
    <string name="battery_remaining">Remaining:</string>
    <string name="time_until_full">Until Full:</string>
    <string name="status">Status:</string>
    <string name="level">Level:</string>
    <string name="temperature">Temperature:</string>
    <string name="voltage">Voltage:</string>
    <string name="power_title_realtime_battery_usage">Using Battery</string>
    <string name="power_title_lifetime_battery_usage">Using Battery</string>
    <string name="power_title_realtime_charger_speed">Charger Connected</string>
    <string name="power_title_lifetime_charger_speed">Charger Connected</string>
    <string name="power_hint_realtime_battery_usage">(Tap to switch to lifetime power)</string>
    <string name="power_hint_realtime_charger_speed">(Tap to switch to lifetime power)</string>
    <string name="power_hint_lifetime_battery_usage">(Tap to switch to real-time power)</string>
    <string name="power_hint_lifetime_charger_speed">(Tap to switch to real-time power)</string>
    <string name="power_battery_level">BATTERY LEVEL</string>
    <string name="power_charging_status">CHARGING STATUS</string>
    <string name="power_battery_temperature">BATTERY TEMPERATURE</string>
    <string name="power_battery_min_max">REAL-TIME\nMIN/MAX</string>
    <string name="power_charging_rate">CHARGING RATE</string>
    <string name="power_discharging_rate">DISCHARGING RATE</string>
    <string name="value_celsius_template" formatted="false">%s\u2103</string>
    <string name="value_voltage_template" formoatted="false">%s V</string>
    <string name="value_min_max_template" formatted="false">%s/%s mW</string>
    <string name="max_battery_life">20+</string>
    <string name="dialog_reset_lifetime_statistics_title">Reset Lifetime Statistics</string>
    <string name="dialog_reset_lifetime_statistics_message">Reset lifetime statistics?</string>
    <string name="dialog_reset_realtime_statistics_title">Reset Real-time Statistics</string>
    <string name="dialog_reset_realtime_statistics_message">Reset real-time statistics?</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="realtime">Real-time</string>
    <string name="lifetime">Lifetime</string>
    <string name="count">Count</string>
    <string name="charger_readings_not_supported_with_estimated_power_title">Charging power not supported</string>
    <string name="charger_readings_not_supported_with_estimated_power_summary">Your mobile device does not support power measurements while charging. You can still view the tips to speed up charging to see how you can charge your mobile device faster.</string>
    <string name="process_stop">STOP</string>
    <string name="promo_battery_mentor_pro">For an ad-free experience, tap here to check out Battery Mentor Pro in Google Play.</string>
    <string name="prototype_running_applications">Running Applications</string>
    <string name="prototype_application_cpu_load_template" formatted="false">%s: %,.2f</string>
    <string name="brightness_gadget">Brightness Gadget</string>
    <string name="cpu_gadget">CPU Gadget</string>
    <string name="battery_gadget_slider_hint">Move the slider to see the impact of screen brightness on battery life</string>
    <string name="screen_power">Screen Power</string>
    <string name="screen_power_label">SCREEN POWER:</string>
    <string name="brightness_label">BRIGHTNESS:</string>
    <string name="screen_size_label">SCREEN SIZE:</string>
    <string name="screen_dimensions_label">RESOLUTION:</string>
    <string name="screen_density_label">DENSITY:</string>
    <string name="power_per_brightness_label">POWER / BRIGHTNESS:</string>
    <string name="max_power_per_pixel_label">MAX POWER / PIXEL:</string>
    <string name="screen_test">Screen Test</string>
    <string name="screen_test_data_template" formatted="false">Brightness %d%%: %s mW\n</string>
    <string name="cpu_load_data_template" formatted="false">CPU Load %d%%: %s mW\n</string>
    <string name="cpu_frequency_data_template" formatted="false">Frequency %d: %s MHz\n</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="not_charging">Not Charging</string>
    <string name="fully_charged">Fully Charged</string>
    <string name="test_screen_run">Run Screen Test</string>
    <string name="test_screen_description">Run the screen test to see how screen brightness affects your battery life.</string>
    <string name="test_in_progress">Test in progress</string>
    <string name="test_error_charger_connected">Please disconnect the charger to resume the test.</string>
    <string name="stop_test">STOP TEST</string>
    <string name="battery_tip_title_run_screen_test">Run Screen Test</string>
    <string name="battery_tip_title_run_screen_test_summary">The screen is the largest consumer of power in mobile devices.\n\nTap here to run the screen test to see how screen brightness affects your battery life.</string>
    <string name="battery_tip_title_reduce_screen_brightness">Reduce Screen Brightness</string>
    <string name="battery_tip_title_reduce_screen_brightness_summary">The screen is the largest consumer of power in mobile devices.\n\nTap here to open the Screen Tab and move the slider to the left to reduce screen brightness and improve battery life.</string>
    <string name="battery_tip_title_force_stop_unused_apps">Force Stop Unused Apps</string>
    <string name="battery_tip_title_force_stop_unused_apps_summary">Some apps keep running in the background and consume power even when they are closed.\n\nTap here to open the battery manager and force stop any apps that you are not using to improve battery life.</string>
    <string name="battery_tip_title_use_wifi">Use Wi-Fi instead of Data</string>
    <string name="battery_tip_title_use_wifi_summary">Using Wi-Fi for browsing, checking e-mail, and other network activities consumes much less power than using cellular data.\n\nTap here to open the Wi-Fi manager and connect to a Wi-Fi network to improve battery life.</string>
    <string name="battery_tip_title_disable_location_services">Disable Location Services</string>
    <string name="battery_tip_title_disable_location_services_summary">Some apps use location services even when closed and consume power in the background.\n\nTap here to open the location manager and either disable location services, enable the battery saving mode, or force stop apps that have high battery usage to improve battery life.</string>
    <string name="charger_tip_title_try_different_chargers">Try Different Charging Cables</string>
    <string name="charger_tip_title_try_different_chargers_summary">USB cables and AC adapters from different vendors charge at different speeds. Typically, accessories bought directly from device manufacturers charge faster than accessories bought from third-party vendors.</string>
    <string name="charger_tip_title_turn_off_screen">Turn Off the Screen</string>
    <string name="charger_tip_title_turn_off_screen_summary">The screen is the largest consumer of power in mobile devices. Turn off your screen using the power button to charge your mobile device faster.</string>
    <string name="charger_tip_title_turn_on_airplane_mode">Turn on Airplane Mode</string>
    <string name="charger_tip_title_turn_on_airplane_mode_summary">The 3G/4G radio constantly scans for nearby base stations and is a large consumer of power in mobile devices.\n\nTap here to open wireless &amp; network settings and turn on airplane mode to charge your mobile device faster.</string>
    <string name="charger_tip_title_plug_directly_into_outlet">Plug Directly into an Outlet</string>
    <string name="charger_tip_title_plug_directly_into_outlet_summary">A USB cable that is plugged into a power outlet via an AC adapter typically provides more charging power than a USB cable that is connected through a laptop or desktop. Use an AC adapter plugged into an outlet to charge your mobile device faster.</string>
    <string name="tutorial_permissions_title">System Permissions</string>
    <string name="tutorial_permissions_text">Battery Mentor needs permissions to modify system settings for the Screen Tab to work properly. On the next screen, please allow Battery Mentor to modify system settings and press <b>Back</b> when you are done.</string>
</resources>