<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="15dp">
    <LinearLayout android:id="@+id/powerbench_list_label_container"
        style="@style/powerbench_list_label_container">
        <TextView android:id="@+id/label_status"
            style="@style/powerbench_list_label"
            android:text="@string/status" />
        <TextView android:id="@+id/label_level"
            style="@style/powerbench_list_label"
            android:text="@string/level" />
        <TextView android:id="@+id/label_temperature"
            style="@style/powerbench_list_label"
            android:text="@string/temperature" />
        <TextView android:id="@+id/label_voltage"
            style="@style/powerbench_list_label"
            android:text="@string/voltage" />
    </LinearLayout>
    <LinearLayout style="@style/powerbench_list_value_container"
        android:layout_toRightOf="@+id/powerbench_list_label_container">
        <TextView android:id="@+id/value_status"
            style="@style/powerbench_list_value" />
        <TextView android:id="@+id/value_level"
            style="@style/powerbench_list_value" />
        <TextView android:id="@+id/value_temperature"
            style="@style/powerbench_list_value" />
        <TextView android:id="@+id/value_voltage"
            style="@style/powerbench_list_value" />
    </LinearLayout>
</RelativeLayout>