<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout android:id="@+id/screen_test_welcome_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView android:id="@+id/icon_screen_test"
                style="@style/image_button"
                android:src="@drawable/remove_icon_screen_test_blue" />
            <TextView style="@style/help_text"
                android:text="@string/test_screen_description"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/screen_test_gadget_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView style="@style/gadget_screen_title"
                android:text="@string/brightness_gadget"/>
            <SeekBar android:id="@+id/gadget_screen_brightness_slider"
                style="@style/gadget_slider"
                android:max="255" />
            <TextView style="@style/gadget_hint"
                android:text="@string/battery_gadget_slider_hint" />
        </LinearLayout>
        <Button android:id="@+id/button_screen_test"
            style="@style/powerbench_button"
            android:text="@string/test_screen_run"/>
    </LinearLayout>
</RelativeLayout>