<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/powerbench_buttons"
        android:background="@color/material_blue">
        <TextView android:id="@+id/powerbench_tutorial_title"
            style="@style/powerbench_tutorial_title"
            android:layout_alignParentTop="true"
            android:text="@string/tutorial_permissions_title"/>
        <TextView android:id="@+id/powerbench_tutorial_text"
            style="@style/powerbench_tutorial_text"
            android:layout_below="@id/powerbench_tutorial_title"
            android:text="@string/tutorial_permissions_text"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_below="@+id/powerbench_tutorial_text">
            <ImageView android:id="@+id/powerbench_tutorial_image"
                style="@style/powerbench_tutorial_image"
                android:src="@drawable/tutorial_modify_system_settings" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:id="@id/powerbench_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/powerbench_ad"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <Button android:id="@+id/powerbench_button_cancel"
            style="@style/powerbench_tutorial_button"
            android:text="@string/cancel"/>
        <Button android:id="@+id/powerbench_button_ok"
            style="@style/powerbench_tutorial_button"
            android:text="@string/ok"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/powerbench_ad"
        style="@style/powerbench_ad"
        android:layout_above="@+id/align_parent_bottom_view"
        android:background="@color/material_blue"
        ads:background="@color/material_blue"
        ads:adSize="BANNER"
        ads:adUnitId="@string/advertising_id">
    </com.google.android.gms.ads.AdView>
    <View android:id="@+id/align_parent_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
