<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button_stop">
        <TextView android:id="@+id/benchmark_progress_label"
            style="@style/benchmark_progress_text"
            android:text="@string/test_in_progress"
            android:layout_alignLeft="@+id/benchmark_progress_bar"
            android:layout_above="@+id/benchmark_progress_bar"
            android:layout_alignBottom="@+id/benchmark_progress_duration"/>
        <TextView android:id="@+id/benchmark_progress_duration"
            style="@style/benchmark_progress_text"
            android:layout_alignRight="@+id/benchmark_progress_bar"
            android:layout_above="@+id/benchmark_progress_bar"/>
        <ProgressBar android:id="@+id/benchmark_progress_bar"
            style="@style/benchmark_progress_bar" />
        <TextView android:id="@+id/benchmark_progress_error"
            style="@style/benchmark_progress_error"
            android:layout_alignLeft="@+id/benchmark_progress_bar"
            android:layout_alignRight="@+id/benchmark_progress_bar"
            android:layout_below="@+id/benchmark_progress_bar"
            android:visibility="gone"
            android:text="@string/test_error_charger_connected"/>
        <!-- <TextView android:id="@+id/benchmark_progress_text_view"
            style="@style/benchmark_progress_text"
            android:layout_alignLeft="@+id/benchmark_progress_bar"
            android:layout_below="@+id/benchmark_progress_bar"/> -->
    </RelativeLayout>
    <Button android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_above="@+id/align_parent_bottom_view"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_test" />
    <View android:id="@+id/align_parent_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>